# nft-assessment

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
config/: default.toml  development.yaml
src/: main.rs
src/adapters/: mod.rs
src/adapters/app/: app.rs
src/adapters/axum/: axum_response.rs
src/adapters/config/config_rs/: config_rs_loader.rs
src/adapters/rgb/: rgb.rs
src/adapters/rgb/rgblib/: rgblib_client.rs
src/application/dtos/: assets.rs  config.rs  mod.rs  wallet.rs
src/application/errors/: application_error.rs  mod.rs
src/domains/rgb/api/http/: rgb_handler.rs
