[package]
name = "assessment"
version = "0.1.0"
edition = "2021"
authors = ["Dario Anongba Varela <dario.anongba@gmail.com>"]
rust-version = "1.74"
license = "MIT"
description = "Open Source RGB/Lightning Developer assessment test"

[dependencies]
async-trait = "0.1.74"
axum = "0.7.2"
rgb-lib = { git = "https://github.com/RGB-Tools/rgb-lib", branch = "master" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34", features = ["full"] }
config = { version = "0.13.4", features = ["yaml", "json", "toml"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
thiserror = "1.0.56"
amplify_num = "=0.5.1"
